# PokeMan

./: CMakeLists.txt  README.md  main.cpp
header/: AttackStrategy.hpp  CommonSphere.hpp  Dark.hpp  Electric.hpp  Fighting.hpp  Fire.hpp  Flying.hpp  Grass.hpp  Item.hpp  Kick.hpp  LargePotion.hpp  MasterSphere.hpp  MediumPotion.hpp  RareSphere.hpp  Rock.hpp  Scratch.hpp  SmallPotion.hpp  Steel.hpp  Tackle.hpp  Water.hpp  agility.h  anodized.h  battle.h  bigBattle.h  character.h  characterEntity.h  fastLevel.h  levelStrategy.h  mediumLevel.h  oger.h  player.h  pokehub.h  psychic.hpp  randomLevel.h  shock.h  slowLevel.h  spark.h  stone.h  tele.h  tidal.h  (+2 more)
source/: agility.cpp  anodized.cpp  battle.cpp  bigBattle.cpp  character.cpp  characterEntity.cpp  fastLevel.cpp  levelStrategy.cpp  mediumLevel.cpp  oger.cpp  player.cpp  pokehub.cpp  randomLevel.cpp  shock.cpp  slowLevel.cpp  spark.cpp  stone.cpp  tele.cpp  tidal.cpp  vulture.cpp  weed.cpp
test/: CommonSphereTest.hpp  LargePotionTest.hpp  MasterSphereTest.hpp  MediumPotionTest.hpp  RareSphereTest.hpp  SmallPotionTest.hpp  agilityTest.h  anodizedTest.h  atkTests.h  battleTest.h  bigBattleTest.h  characterEntityTest.h  characterTest.h  fastLevelTest.h  mediumLevelTest.h  ogerTest.h  playerTest.h  pokehubTest.h  randomLevelTest.h  shockTest.h  slowLevelTest.h  sparkTest.h  stoneTest.h  teleTest.h  test.cpp  tidalTest.h  vultureTest.h  weedTest.h
